--- a/templates/index.html
+++ b/templates/index.html
@@ -40,17 +40,17 @@
             </div>
         </div>
         <div class="kaiteki-and-teishi-ctl">
-            <button class="kaiteki">快適自動</button>
-            <button class="teishi">停止</button>
+            <button id="kaiteki">快適自動</button>
+            <button id="teishi">停止</button>
         </div>
         <div class="sep-rl">
             <div class="temp-ctl">
-                <button class="reibo">冷房</button>
-                <button class="danbo">暖房</button>
+                <button id="reibo">冷房</button>
+                <button id="danbo">暖房</button>
             </div>
             <div class="hum-ctl">
-                <button class="joshitsu">除湿</button>
-                <button class="kashitsu">加湿</button>
+                <button id="joshitsu">除湿</button>
+                <button id="kashitsu">加湿</button>
             </div>
         </div>
         <div class="sep-rl">
