--- a/templates/index.html
+++ b/templates/index.html
@@ -28,15 +28,18 @@
     </div>
     <div class="tab-content" id="tab3">
         <div>air conditioner controller</div>
-        <div><p>state: <b>停止</b></p></div>
+        <div><p>state: <b id="state">停止</b></p></div>
         <div class="sep-rl">
             <div class="temp-ctl">
                 <div>温度設定 [℃]</div>
-                <div id="ondo-settei">26.5</div>
+                <p id="reibo-temp">26.5</p>
+                <p id="danbo-temp">22</p>
+                <p id="kaiteki-temp">0</p>
             </div>
             <div class="hum-ctl">
                 <div>湿度設定 [%]</div>
-                <div id="shitsudo-settei">50</div>
+                <p id="reibo-hum">50</p>
+                <p id="danbo-hum">40</p>
             </div>
         </div>
         <div class="kaiteki-and-teishi-ctl">
