update light command

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,15 +16,15 @@
 
     <div class="tab-content" id="tab1">
         <div>Channel 1</div>
-        <button class="denki-on">電気ON</button>
-        <button class="denki-off">電気OFF</button>
-        <button class="denki-mini">常夜灯</button>
+        <button class="denki denki-on" id="ch1_on">電気ON</button>
+        <button class="denki denki-off" id="ch1_off">電気OFF</button>
+        <button class="denki denki-mini" id="ch1_mini">常夜灯</button>
     </div>
     <div class="tab-content" id="tab2">
         <div>Channel 2</div>
-        <button class="denki-on">電気ON</button>
-        <button class="denki-off">電気OFF</button>
-        <button class="denki-mini">常夜灯</button>
+        <button class="denki denki-on" id="ch2_on">電気ON</button>
+        <button class="denki denki-off" id="ch2_off">電気OFF</button>
+        <button class="denki denki-mini" id="ch2_mini">常夜灯</button>
     </div>
     <div class="tab-content" id="tab3">
         <div>air conditioner controller</div>
