--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>タブ切り替え</title>
+    <title>{{ name }}</title>
     <link href= "{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
 </head>
 <body>
